--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "vbap"
 version = "0.1.0"
 edition = "2021"
 description = "Vector Base Amplitude Panning for spatial audio"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 repository = "https://github.com/PoHsuanLai/vbap"
 keywords = ["audio", "panning", "spatial", "vbap", "surround"]
 categories = ["multimedia::audio"]
